--- a/src/app/work/projects/adaptive-design-system-for-archlight.mdx
+++ b/src/app/work/projects/adaptive-design-system-for-archlight.mdx
@@ -8,8 +8,8 @@ images:
   - "/images/projects/project-01/cover-03.jpg"
   - "/images/projects/project-01/cover-04.jpg"
 team:
-  - name: "Selene Yu"
-    role: "Software Engineer"
+  - name: "Ricky wong"
+    role: "Cyber Security Engineer"
     avatar: "/images/avatar.jpg"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
   - name: "Jane Smith"
