--- a/src/app/work/projects/hash-tool.mdx
+++ b/src/app/work/projects/hash-tool.mdx
@@ -18,9 +18,9 @@ The primary objective was to implement a unique hashing function in C, ensuring 
 
 ## Key Features
 
-- **Custom Hashing Algorithm: Built a unique hashing function that combines principles learned from MD5 and SHA-256, ensuring robustness against common vulnerabilities.
-- **Data Integrity Verification: The tool includes mechanisms for checking data integrity, allowing users to detect any unauthorized changes to the original data.
-- **Configurable Security Parameters: Users can adjust various parameters to customize the hashing process according to their specific security requirements.
+- Custom Hashing Algorithm: Built a unique hashing function that combines principles learned from MD5 and SHA-256, ensuring robustness against common vulnerabilities.
+- Data Integrity Verification: The tool includes mechanisms for checking data integrity, allowing users to detect any unauthorized changes to the original data.
+- Configurable Security Parameters: Users can adjust various parameters to customize the hashing process according to their specific security requirements.
 
 ## Challenges and Learnings
 
