--- a/src/app/blog/posts/six-month-aws.mdx
+++ b/src/app/blog/posts/six-month-aws.mdx
@@ -6,13 +6,13 @@ summary: "In six months with AWS, I've transformed from a beginner to building s
 
 When I started my journey with AWS six months ago, I was stepping into entirely new territory. Like many, I’d heard about the power of the cloud and the vast suite of services AWS offers, but I was coming in with zero hands-on experience. Looking back, it’s astonishing to see how much growth and transformation can happen in just a few months—and how Amazon’s core principles have shaped the way I’ve approached learning and building on AWS.
 
-##Tackling a Data Processing Challenge: Customer Obsession in Action
+## Tackling a Data Processing Challenge: Customer Obsession in Action
 
 One of my first projects involved working with a massive dataset that my team had been analyzing manually. The process was labor-intensive and time-consuming. Seeing this, I couldn’t help but think, “There has to be a better way.” Driven by the principle of Customer Obsession, I proactively explored options for automating the task.
 
 After some trial and error, I built a solution that cut down the manual workload by 95%. It wasn’t just about automating tasks—it was about freeing up my team’s time so they could focus on more strategic initiatives. The impact of automation was immediate, and seeing the results only fueled my desire to dive deeper into AWS.
 
-![Once UI logo on dark background.](/images/blog/aws.jpeg)
+![Once UI logo on dark background.](/images/blog/aws.png)
 
 ## From Novice to Builder: Bias for Action and Learn and Be Curious
 When I joined, I had never used AWS before. But I knew I had to ramp up quickly to deliver value, so I decided to pursue the AWS Cloud Practitioner certification as my first step. This certification gave me the foundational knowledge I needed to navigate AWS with confidence. Within two months, I was able to build a small, end-to-end service—an accomplishment that felt like a significant milestone.
